--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,13 +42,14 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.santoshadhikari.dice_app"
+        applicationId "com.santoshadhikari.pacman_game"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 6
+        versionName "1.0.6"
+        // edit edit edit 
     }
 
     buildTypes {
